--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,11 +37,11 @@ jobs:
 
       - name: AZ Login Credentials
         run: 
-          export ARM_CLIENT_ID="${{ secrets.ARM_CLIENT_ID }}"
-          export ARM_CLIENT_SECRET="${{ secrets.ARM_CLIENT_SECRET }}"
-          export ARM_TENANT_ID="${{ secrets.ARM_TENANT_ID }}"
-          export ARM_SUBSCRIPTION_ID="${{ secrets.ARM_SUBSCRIPTION_ID }}"
-          az login
+          export ARM_CLIENT_ID="${{ secrets.ARM_CLIENT_ID }}";
+          export ARM_CLIENT_SECRET="${{ secrets.ARM_CLIENT_SECRET }}";
+          export ARM_TENANT_ID="${{ secrets.ARM_TENANT_ID }}";
+          export ARM_SUBSCRIPTION_ID="${{ secrets.ARM_SUBSCRIPTION_ID }}";
+          az login;
           
       # Runs a single command using the runners shell
       - name: Run a one-line script
