--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,22 +26,32 @@ env:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  terraform:
+    name: 'Terraform'
+    env:
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }};
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }};
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }};
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: production
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout
       - uses: actions/checkout@v3
 
-      - name: AZ Login Credentials
-        run: 
-          export ARM_CLIENT_ID="${{ secrets.ARM_CLIENT_ID }}";
-          export ARM_CLIENT_SECRET="${{ secrets.ARM_CLIENT_SECRET }}";
-          export ARM_TENANT_ID="${{ secrets.ARM_TENANT_ID }}";
-          export ARM_SUBSCRIPTION_ID="${{ secrets.ARM_SUBSCRIPTION_ID }}";
+      - name: 'Terraform Init'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+          tf_actions_version: ${{ env.TF_VERSION }}
+          tf_actions_subcommand: 'init'
+          tf_actions_working_dir: "./terraform"
           
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: terraform init; terraform apply --auto-approve
+      - name: 'Terraform Apply'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+          tf_actions_version: ${{ env.TF_VERSION }}
+          tf_actions_subcommand: 'apply'
+          tf_actions_working_dir: "./terraform"
+          
