--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,14 +44,14 @@ jobs:
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
         with:
-#          tf_actions_version: ${{ env.TF_VERSION }}
+          tf_actions_version: '1.7.5'
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: "./terraform"
           
       - name: 'Terraform Apply'
         uses: hashicorp/terraform-github-actions@master
         with:
-#          tf_actions_version: ${{ env.TF_VERSION }}
+          tf_actions_version: '1.7.5'
           tf_actions_subcommand: 'apply'
           tf_actions_working_dir: "./terraform"
           
