--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,12 +46,12 @@ jobs:
         with:
           tf_actions_version: '1.7.5'
           tf_actions_subcommand: 'init'
-          tf_actions_working_dir: "./terraform"
+#          tf_actions_working_dir: "./terraform"
           
       - name: 'Terraform Apply'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: '1.7.5'
           tf_actions_subcommand: 'apply'
-          tf_actions_working_dir: "./terraform"
+#          tf_actions_working_dir: "./terraform"
           
