--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,10 +31,10 @@ jobs:
   terraform:
     name: 'Terraform'
     env:
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }};
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }};
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }};
+    #  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }};
+    #  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+    #  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }};
+    #  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }};
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: production
