--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
   # This workflow contains a single job called "build"
   terraform:
     name: 'Terraform'
-    env:
+ #   env:
     #  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }};
     #  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
     #  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }};
