--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -57,11 +57,11 @@ jobs:
 
       - name: Terraform Init
         id: init
-        env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }};
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }};
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }};
+#        env:
+#          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }};
+#          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+#          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }};
+#          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }};
         run: terraform init
 
 #      - name: 'Terraform Init'
