--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,12 +30,6 @@ jobs:
   # This workflow contains a single job called "build"
   terraform:
     name: 'Terraform'
- #   env:
-    #  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }};
-    #  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-    #  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }};
-    #  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }};
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: production
 
@@ -55,21 +49,16 @@ jobs:
         with:
             terraform_version: 1.7.5
 
-      - name: Terraform Init
-        id: init
-#        env:
-#          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }};
-#          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-#          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }};
-#          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }};
-        run: terraform init
+#      - name: Terraform Init
+#        id: init
+#        run: terraform init
 
-#      - name: 'Terraform Init'
-#        uses: hashicorp/terraform-github-actions@master
-#        with:
-#          tf_actions_version: '1.7.5'
-#          tf_actions_subcommand: 'init'
-#          tf_actions_working_dir: "./terraform"
+      - name: 'Terraform Init'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+          tf_actions_version: '1.7.5'
+          tf_actions_subcommand: 'init'
+          tf_actions_working_dir: "./terraform"
 #          
 #      - name: 'Terraform Apply'
 #        uses: hashicorp/terraform-github-actions@master
