--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,11 +59,11 @@ jobs:
           tf_actions_version: '1.7.5'
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: "./terraform"
-#          
-#      - name: 'Terraform Apply'
-#        uses: hashicorp/terraform-github-actions@master
-#        with:
-#          tf_actions_version: '1.7.5'
-#          tf_actions_subcommand: 'apply'
-#          tf_actions_working_dir: "./terraform"
+          
+      - name: 'Terraform Apply'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+          tf_actions_version: '1.7.5'
+          tf_actions_subcommand: 'apply'
+          tf_actions_working_dir: "./terraform"
           
