--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,14 +53,14 @@ jobs:
 #        run: terraform init
 
       - name: 'Terraform Init'
-        uses: hashicorp/terraform-github-actions@master
+        uses: hashicorp/terraform-github-actions@v0.8.0
         with:
           tf_actions_version: '1.7.5'
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: "./terraform"
           
       - name: 'Terraform Apply'
-        uses: hashicorp/terraform-github-actions@master
+        uses: hashicorp/terraform-github-actions@v0.8.0
         with:
           tf_actions_version: '1.7.5'
           tf_actions_subcommand: 'apply'
