--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,21 +48,10 @@ jobs:
         with:
             terraform_version: 1.7.5
 
-#      - name: Terraform Init
-#        id: init
-#        run: terraform init
+      - name: Terraform Init
+        id: init
+        run: terraform init
 
-      - name: 'Terraform Init'
-        uses: hashicorp/terraform-github-actions@v0.8.0
-        with:
-          tf_actions_version: '1.7.5'
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: "./terraform"
-          
-      - name: 'Terraform Apply'
-        uses: hashicorp/terraform-github-actions@v0.8.0
-        with:
-          tf_actions_version: '1.7.5'
-          tf_actions_subcommand: 'apply'
-          tf_actions_working_dir: "./terraform"
-          
+      - name: Terraform Apply
+        id: init
+        run: terraform apply
