--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,7 @@ env:
   ARM_SUBSCRIPTION_ID: "${{ secrets.ARM_SUBSCRIPTION_ID }}"
   ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
   TF_INPUT: false
-  TF_LOG: trace
+#  TF_LOG: trace
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
