--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,12 +34,12 @@ jobs:
     environment: production
 
     steps:
-#      - name: 'Az CLI login'
-#        uses: azure/login@v1
-#        with:
-#          client-id: ${{ secrets.ARM_CLIENT_ID }}
-#          tenant-id: ${{ secrets.ARM_TENANT_ID }}
-#          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      - name: 'Az CLI login'
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.ARM_CLIENT_ID }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID }}
+          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
 
       - name: Checkout
         uses: actions/checkout@v4
