--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,4 +55,4 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        run: terraform apply
+        run: terraform apply --auto-approve
